--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
+    "@adobe/lit-mobx": "2.0.0",
+    "@polymer/iron-a11y-announcer": "3.0.2",
     "@polymer/iron-icon": "3.0.1",
+    "@polymer/iron-iconset-svg": "3.0.1",
     "@polymer/iron-list": "3.1.0",
+    "@polymer/iron-media-query": "3.0.1",
+    "@polymer/iron-meta": "3.0.1",
+    "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.2.0",
     "@vaadin/accordion": "22.0.3",
     "@vaadin/app-layout": "22.0.3",
@@ -16,6 +22,7 @@
     "@vaadin/checkbox-group": "22.0.3",
     "@vaadin/combo-box": "22.0.3",
     "@vaadin/common-frontend": "0.0.17",
+    "@vaadin/component-base": "22.0.3",
     "@vaadin/confirm-dialog": "22.0.3",
     "@vaadin/context-menu": "22.0.3",
     "@vaadin/cookie-consent": "22.0.3",
@@ -26,6 +33,7 @@
     "@vaadin/details": "22.0.3",
     "@vaadin/dialog": "22.0.3",
     "@vaadin/email-field": "22.0.3",
+    "@vaadin/field-base": "22.0.3",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "0.0.15",
     "@vaadin/form-layout": "22.0.3",
@@ -35,6 +43,7 @@
     "@vaadin/horizontal-layout": "22.0.3",
     "@vaadin/icon": "22.0.3",
     "@vaadin/icons": "22.0.3",
+    "@vaadin/input-container": "22.0.3",
     "@vaadin/integer-field": "22.0.3",
     "@vaadin/item": "22.0.3",
     "@vaadin/list-box": "22.0.3",
@@ -75,6 +84,7 @@
     "@vaadin/vaadin-date-picker": "22.0.3",
     "@vaadin/vaadin-date-time-picker": "22.0.3",
     "@vaadin/vaadin-details": "22.0.3",
+    "@vaadin/vaadin-development-mode-detector": "2.0.4",
     "@vaadin/vaadin-dialog": "22.0.3",
     "@vaadin/vaadin-form-layout": "22.0.3",
     "@vaadin/vaadin-grid": "22.0.3",
@@ -83,6 +93,7 @@
     "@vaadin/vaadin-icons": "22.0.3",
     "@vaadin/vaadin-item": "22.0.3",
     "@vaadin/vaadin-list-box": "22.0.3",
+    "@vaadin/vaadin-list-mixin": "22.0.3",
     "@vaadin/vaadin-login": "22.0.3",
     "@vaadin/vaadin-lumo-styles": "22.0.3",
     "@vaadin/vaadin-material-styles": "22.0.3",
@@ -90,6 +101,7 @@
     "@vaadin/vaadin-messages": "22.0.3",
     "@vaadin/vaadin-notification": "22.0.3",
     "@vaadin/vaadin-ordered-layout": "22.0.3",
+    "@vaadin/vaadin-overlay": "22.0.3",
     "@vaadin/vaadin-progress-bar": "22.0.3",
     "@vaadin/vaadin-radio-button": "22.0.3",
     "@vaadin/vaadin-rich-text-editor": "22.0.3",
@@ -97,16 +109,21 @@
     "@vaadin/vaadin-shrinkwrap": "22.0.4",
     "@vaadin/vaadin-split-layout": "22.0.3",
     "@vaadin/vaadin-tabs": "22.0.3",
+    "@vaadin/vaadin-template-renderer": "22.0.3",
     "@vaadin/vaadin-text-field": "22.0.3",
     "@vaadin/vaadin-themable-mixin": "22.0.3",
     "@vaadin/vaadin-time-picker": "22.0.3",
     "@vaadin/vaadin-upload": "22.0.3",
+    "@vaadin/vaadin-usage-statistics": "2.1.0",
     "@vaadin/vaadin-virtual-list": "22.0.3",
     "@vaadin/vertical-layout": "22.0.3",
     "@vaadin/virtual-list": "22.0.3",
+    "@webcomponents/shadycss": "1.9.6",
     "construct-style-sheets-polyfill": "3.0.4",
     "date-fns": "2.23.0",
-    "lit": "2.0.0"
+    "line-awesome": "1.3.0",
+    "lit": "2.0.0",
+    "mobx": "^6.3.5"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
@@ -137,8 +154,14 @@
   },
   "vaadin": {
     "dependencies": {
+      "@adobe/lit-mobx": "2.0.0",
+      "@polymer/iron-a11y-announcer": "3.0.2",
       "@polymer/iron-icon": "3.0.1",
+      "@polymer/iron-iconset-svg": "3.0.1",
       "@polymer/iron-list": "3.1.0",
+      "@polymer/iron-media-query": "3.0.1",
+      "@polymer/iron-meta": "3.0.1",
+      "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.2.0",
       "@vaadin/accordion": "22.0.3",
       "@vaadin/app-layout": "22.0.3",
@@ -151,6 +174,7 @@
       "@vaadin/checkbox-group": "22.0.3",
       "@vaadin/combo-box": "22.0.3",
       "@vaadin/common-frontend": "0.0.17",
+      "@vaadin/component-base": "22.0.3",
       "@vaadin/confirm-dialog": "22.0.3",
       "@vaadin/context-menu": "22.0.3",
       "@vaadin/cookie-consent": "22.0.3",
@@ -161,6 +185,7 @@
       "@vaadin/details": "22.0.3",
       "@vaadin/dialog": "22.0.3",
       "@vaadin/email-field": "22.0.3",
+      "@vaadin/field-base": "22.0.3",
       "@vaadin/form": "0.0.15",
       "@vaadin/form-layout": "22.0.3",
       "@vaadin/fusion-frontend": "0.0.15",
@@ -169,6 +194,7 @@
       "@vaadin/horizontal-layout": "22.0.3",
       "@vaadin/icon": "22.0.3",
       "@vaadin/icons": "22.0.3",
+      "@vaadin/input-container": "22.0.3",
       "@vaadin/integer-field": "22.0.3",
       "@vaadin/item": "22.0.3",
       "@vaadin/list-box": "22.0.3",
@@ -209,6 +235,7 @@
       "@vaadin/vaadin-date-picker": "22.0.3",
       "@vaadin/vaadin-date-time-picker": "22.0.3",
       "@vaadin/vaadin-details": "22.0.3",
+      "@vaadin/vaadin-development-mode-detector": "2.0.4",
       "@vaadin/vaadin-dialog": "22.0.3",
       "@vaadin/vaadin-form-layout": "22.0.3",
       "@vaadin/vaadin-grid": "22.0.3",
@@ -217,6 +244,7 @@
       "@vaadin/vaadin-icons": "22.0.3",
       "@vaadin/vaadin-item": "22.0.3",
       "@vaadin/vaadin-list-box": "22.0.3",
+      "@vaadin/vaadin-list-mixin": "22.0.3",
       "@vaadin/vaadin-login": "22.0.3",
       "@vaadin/vaadin-lumo-styles": "22.0.3",
       "@vaadin/vaadin-material-styles": "22.0.3",
@@ -224,6 +252,7 @@
       "@vaadin/vaadin-messages": "22.0.3",
       "@vaadin/vaadin-notification": "22.0.3",
       "@vaadin/vaadin-ordered-layout": "22.0.3",
+      "@vaadin/vaadin-overlay": "22.0.3",
       "@vaadin/vaadin-progress-bar": "22.0.3",
       "@vaadin/vaadin-radio-button": "22.0.3",
       "@vaadin/vaadin-rich-text-editor": "22.0.3",
@@ -231,16 +260,21 @@
       "@vaadin/vaadin-shrinkwrap": "22.0.4",
       "@vaadin/vaadin-split-layout": "22.0.3",
       "@vaadin/vaadin-tabs": "22.0.3",
+      "@vaadin/vaadin-template-renderer": "22.0.3",
       "@vaadin/vaadin-text-field": "22.0.3",
       "@vaadin/vaadin-themable-mixin": "22.0.3",
       "@vaadin/vaadin-time-picker": "22.0.3",
       "@vaadin/vaadin-upload": "22.0.3",
+      "@vaadin/vaadin-usage-statistics": "2.1.0",
       "@vaadin/vaadin-virtual-list": "22.0.3",
       "@vaadin/vertical-layout": "22.0.3",
       "@vaadin/virtual-list": "22.0.3",
+      "@webcomponents/shadycss": "1.9.6",
       "construct-style-sheets-polyfill": "3.0.4",
       "date-fns": "2.23.0",
-      "lit": "2.0.0"
+      "line-awesome": "1.3.0",
+      "lit": "2.0.0",
+      "mobx": "^6.3.5"
     },
     "devDependencies": {
       "@babel/core": "7.16.7",
@@ -265,6 +299,6 @@
       "workbox-precaching": "6.4.2",
       "workbox-webpack-plugin": "6.4.2"
     },
-    "hash": "2f10f8a5739a66261011be17271b2bfcaf1a026fb472f5aaafc3795fbb9d0994"
+    "hash": "2c34072418665dd7349fd408fdfa359f0c7a92e64356905bc72684a7ce3bcbbc"
   }
 }
