--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
-    "@hilla/form": "2.5.0-beta1",
-    "@hilla/frontend": "2.5.0-beta1",
-    "@hilla/generator-typescript-cli": "2.5.0-beta1",
-    "@hilla/generator-typescript-core": "2.5.0-beta1",
-    "@hilla/generator-typescript-plugin-backbone": "2.5.0-beta1",
-    "@hilla/generator-typescript-plugin-barrel": "2.5.0-beta1",
-    "@hilla/generator-typescript-plugin-client": "2.5.0-beta1",
-    "@hilla/generator-typescript-plugin-model": "2.5.0-beta1",
-    "@hilla/generator-typescript-plugin-push": "2.5.0-beta1",
-    "@hilla/generator-typescript-plugin-subtypes": "2.5.0-beta1",
-    "@hilla/generator-typescript-utils": "2.5.0-beta1",
-    "@hilla/react-auth": "2.5.0-beta1",
-    "@hilla/react-components": "2.3.0-rc1",
-    "@hilla/react-crud": "2.5.0-beta1",
-    "@hilla/react-form": "2.5.0-beta1",
+    "@hilla/form": "2.5.0",
+    "@hilla/frontend": "2.5.0",
+    "@hilla/generator-typescript-cli": "2.5.0",
+    "@hilla/generator-typescript-core": "2.5.0",
+    "@hilla/generator-typescript-plugin-backbone": "2.5.0",
+    "@hilla/generator-typescript-plugin-barrel": "2.5.0",
+    "@hilla/generator-typescript-plugin-client": "2.5.0",
+    "@hilla/generator-typescript-plugin-model": "2.5.0",
+    "@hilla/generator-typescript-plugin-push": "2.5.0",
+    "@hilla/generator-typescript-plugin-subtypes": "2.5.0",
+    "@hilla/generator-typescript-utils": "2.5.0",
+    "@hilla/react-auth": "2.5.0",
+    "@hilla/react-components": "2.3.0",
+    "@hilla/react-crud": "2.5.0",
+    "@hilla/react-form": "2.5.0",
     "@polymer/polymer": "3.5.1",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
@@ -199,21 +199,21 @@
   },
   "vaadin": {
     "dependencies": {
-      "@hilla/form": "2.5.0-beta1",
-      "@hilla/frontend": "2.5.0-beta1",
-      "@hilla/generator-typescript-cli": "2.5.0-beta1",
-      "@hilla/generator-typescript-core": "2.5.0-beta1",
-      "@hilla/generator-typescript-plugin-backbone": "2.5.0-beta1",
-      "@hilla/generator-typescript-plugin-barrel": "2.5.0-beta1",
-      "@hilla/generator-typescript-plugin-client": "2.5.0-beta1",
-      "@hilla/generator-typescript-plugin-model": "2.5.0-beta1",
-      "@hilla/generator-typescript-plugin-push": "2.5.0-beta1",
-      "@hilla/generator-typescript-plugin-subtypes": "2.5.0-beta1",
-      "@hilla/generator-typescript-utils": "2.5.0-beta1",
-      "@hilla/react-auth": "2.5.0-beta1",
-      "@hilla/react-components": "2.3.0-rc1",
-      "@hilla/react-crud": "2.5.0-beta1",
-      "@hilla/react-form": "2.5.0-beta1",
+      "@hilla/form": "2.5.0",
+      "@hilla/frontend": "2.5.0",
+      "@hilla/generator-typescript-cli": "2.5.0",
+      "@hilla/generator-typescript-core": "2.5.0",
+      "@hilla/generator-typescript-plugin-backbone": "2.5.0",
+      "@hilla/generator-typescript-plugin-barrel": "2.5.0",
+      "@hilla/generator-typescript-plugin-client": "2.5.0",
+      "@hilla/generator-typescript-plugin-model": "2.5.0",
+      "@hilla/generator-typescript-plugin-push": "2.5.0",
+      "@hilla/generator-typescript-plugin-subtypes": "2.5.0",
+      "@hilla/generator-typescript-utils": "2.5.0",
+      "@hilla/react-auth": "2.5.0",
+      "@hilla/react-components": "2.3.0",
+      "@hilla/react-crud": "2.5.0",
+      "@hilla/react-form": "2.5.0",
       "@polymer/polymer": "3.5.1",
       "@types/react": "18.2.37",
       "@types/react-dom": "18.2.15",
@@ -301,6 +301,6 @@
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "00a30bbd40812a801cdb27e697fe906871e8e58adf68b6034fa909ce9cf0513a"
+    "hash": "4db27ac7a8eaefebe06a7e7a7b744ca53876cd3a99f815568c41f1004de14225"
   }
 }
