--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <java.version>17</java.version>
         <vaadin.version>24.3.0</vaadin.version>
-        <hilla.version>2.5.0.beta1</hilla.version>
+        <hilla.version>2.5.0</hilla.version>
     </properties>
 
     <parent>
