--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "lit": "3.1.0",
     "proj4": "2.9.2",
     "react": "^18.2.0",
+    "react-colorful": "5.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.18.0"
   },
@@ -111,31 +112,10 @@
     "workbox-precaching": "7.0.0"
   },
   "overrides": {
-    "@vaadin/bundles": "$@vaadin/bundles",
-    "@vaadin/icon": "$@vaadin/icon",
-    "@vaadin/icons": "$@vaadin/icons",
-    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
-    "@vaadin/tooltip": "$@vaadin/tooltip",
-    "@vaadin/common-frontend": "$@vaadin/common-frontend",
-    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
-    "lit": "$lit",
-    "@polymer/polymer": "$@polymer/polymer",
-    "@hilla/react-components": "$@hilla/react-components",
     "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
     "classnames": "$classnames",
-    "react": "$react",
-    "react-dom": "$react-dom",
-    "react-router-dom": "$react-router-dom",
-    "@hilla/generator-typescript-plugin-model": "$@hilla/generator-typescript-plugin-model",
-    "@hilla/generator-typescript-plugin-barrel": "$@hilla/generator-typescript-plugin-barrel",
-    "@hilla/generator-typescript-plugin-push": "$@hilla/generator-typescript-plugin-push",
-    "@hilla/generator-typescript-core": "$@hilla/generator-typescript-core",
-    "@hilla/generator-typescript-plugin-client": "$@hilla/generator-typescript-plugin-client",
-    "@hilla/generator-typescript-utils": "$@hilla/generator-typescript-utils",
-    "@hilla/frontend": "$@hilla/frontend",
-    "@hilla/form": "$@hilla/form",
-    "@hilla/generator-typescript-plugin-backbone": "$@hilla/generator-typescript-plugin-backbone",
-    "@hilla/generator-typescript-cli": "$@hilla/generator-typescript-cli",
+    "@vaadin/bundles": "$@vaadin/bundles",
+    "@hilla/react-components": "$@hilla/react-components",
     "@vaadin/board": "$@vaadin/board",
     "@vaadin/charts": "$@vaadin/charts",
     "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
@@ -143,8 +123,15 @@
     "@vaadin/grid-pro": "$@vaadin/grid-pro",
     "@vaadin/map": "$@vaadin/map",
     "@vaadin/rich-text-editor": "$@vaadin/rich-text-editor",
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "@vaadin/common-frontend": "$@vaadin/common-frontend",
     "@types/react-dom": "$@types/react-dom",
+    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+    "react-router-dom": "$react-router-dom",
+    "lit": "$lit",
     "@types/react": "$@types/react",
+    "@polymer/polymer": "$@polymer/polymer",
     "@vaadin/form-layout": "$@vaadin/form-layout",
     "@vaadin/checkbox-group": "$@vaadin/checkbox-group",
     "@vaadin/list-box": "$@vaadin/list-box",
@@ -160,22 +147,30 @@
     "@vaadin/context-menu": "$@vaadin/context-menu",
     "@vaadin/password-field": "$@vaadin/password-field",
     "@hilla/react-auth": "$@hilla/react-auth",
+    "@hilla/generator-typescript-plugin-model": "$@hilla/generator-typescript-plugin-model",
     "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
     "@vaadin/progress-bar": "$@vaadin/progress-bar",
     "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
     "proj4": "$proj4",
+    "@hilla/generator-typescript-core": "$@hilla/generator-typescript-core",
     "@vaadin/time-picker": "$@vaadin/time-picker",
     "@vaadin/number-field": "$@vaadin/number-field",
     "@vaadin/avatar-group": "$@vaadin/avatar-group",
+    "@vaadin/tooltip": "$@vaadin/tooltip",
+    "@hilla/generator-typescript-utils": "$@hilla/generator-typescript-utils",
     "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
     "@vaadin/login": "$@vaadin/login",
     "@vaadin/side-nav": "$@vaadin/side-nav",
     "@vaadin/details": "$@vaadin/details",
+    "@hilla/frontend": "$@hilla/frontend",
+    "@vaadin/icons": "$@vaadin/icons",
     "@vaadin/button": "$@vaadin/button",
     "@vaadin/accordion": "$@vaadin/accordion",
     "@vaadin/avatar": "$@vaadin/avatar",
     "@hilla/react-crud": "$@hilla/react-crud",
     "@vaadin/radio-group": "$@vaadin/radio-group",
+    "react-colorful": "$react-colorful",
+    "@hilla/generator-typescript-plugin-barrel": "$@hilla/generator-typescript-plugin-barrel",
     "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
     "date-fns": "$date-fns",
     "@vaadin/virtual-list": "$@vaadin/virtual-list",
@@ -187,15 +182,22 @@
     "@vaadin/field-highlighter": "$@vaadin/field-highlighter",
     "@vaadin/date-picker": "$@vaadin/date-picker",
     "@vaadin/dialog": "$@vaadin/dialog",
+    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
     "@vaadin/item": "$@vaadin/item",
     "@vaadin/tabs": "$@vaadin/tabs",
+    "@vaadin/icon": "$@vaadin/icon",
     "@vaadin/split-layout": "$@vaadin/split-layout",
+    "@hilla/generator-typescript-plugin-push": "$@hilla/generator-typescript-plugin-push",
     "@vaadin/text-field": "$@vaadin/text-field",
     "@vaadin/checkbox": "$@vaadin/checkbox",
+    "@hilla/generator-typescript-plugin-client": "$@hilla/generator-typescript-plugin-client",
+    "@hilla/form": "$@hilla/form",
     "@vaadin/notification": "$@vaadin/notification",
     "@vaadin/scroller": "$@vaadin/scroller",
+    "@hilla/generator-typescript-plugin-backbone": "$@hilla/generator-typescript-plugin-backbone",
     "@vaadin/message-input": "$@vaadin/message-input",
-    "@vaadin/email-field": "$@vaadin/email-field"
+    "@vaadin/email-field": "$@vaadin/email-field",
+    "@hilla/generator-typescript-cli": "$@hilla/generator-typescript-cli"
   },
   "vaadin": {
     "dependencies": {
@@ -280,6 +282,7 @@
       "lit": "3.1.0",
       "proj4": "2.9.2",
       "react": "18.2.0",
+      "react-colorful": "5.6.1",
       "react-dom": "18.2.0",
       "react-router-dom": "6.18.0"
     },
@@ -301,6 +304,6 @@
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "3dbb1b4bd2225656104b3541b911977bd682bd7d07b2f5ec2b402026f2f5b602"
+    "hash": "32e6abf2cee439f541f2fd6dfa5b2e7eac35d097b431aafe5e5f20537c4155b6"
   }
 }
