--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
     "@hilla/form": "2.5.1",
     "@hilla/frontend": "2.5.1",
     "@hilla/generator-typescript-cli": "2.5.1",
@@ -18,6 +20,7 @@
     "@hilla/react-components": "2.3.0",
     "@hilla/react-crud": "2.5.1",
     "@hilla/react-form": "2.5.1",
+    "@mui/material": "5.15.4",
     "@polymer/polymer": "3.5.1",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
@@ -197,10 +200,15 @@
     "@vaadin/message-input": "$@vaadin/message-input",
     "@vaadin/email-field": "$@vaadin/email-field",
     "@hilla/generator-typescript-cli": "$@hilla/generator-typescript-cli",
-    "react-colorful": "$react-colorful"
+    "react-colorful": "$react-colorful",
+    "@emotion/react": "$@emotion/react",
+    "@mui/material": "$@mui/material",
+    "@emotion/styled": "$@emotion/styled"
   },
   "vaadin": {
     "dependencies": {
+      "@emotion/react": "11.11.3",
+      "@emotion/styled": "11.11.0",
       "@hilla/form": "2.5.1",
       "@hilla/frontend": "2.5.1",
       "@hilla/generator-typescript-cli": "2.5.1",
@@ -216,6 +224,7 @@
       "@hilla/react-components": "2.3.0",
       "@hilla/react-crud": "2.5.1",
       "@hilla/react-form": "2.5.1",
+      "@mui/material": "5.15.4",
       "@polymer/polymer": "3.5.1",
       "@types/react": "18.2.37",
       "@types/react-dom": "18.2.15",
@@ -304,6 +313,6 @@
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "32e6abf2cee439f541f2fd6dfa5b2e7eac35d097b431aafe5e5f20537c4155b6"
+    "hash": "20cb5da81c392b7d6d4ef2289fc7efe8195178ccc6aac9cf1dad35dfa9e48405"
   }
 }
