chore: bump to flow and hilla 24.4.0.alpha2

--- a/package.json
+++ b/package.json
@@ -4,35 +4,35 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
     "@vaadin-component-factory/vcf-nav": "1.1.0",
-    "@vaadin/accordion": "24.4.0-alpha6",
-    "@vaadin/app-layout": "24.4.0-alpha6",
-    "@vaadin/avatar": "24.4.0-alpha6",
-    "@vaadin/avatar-group": "24.4.0-alpha6",
-    "@vaadin/board": "24.4.0-alpha6",
-    "@vaadin/bundles": "24.4.0-alpha6",
-    "@vaadin/button": "24.4.0-alpha6",
-    "@vaadin/charts": "24.4.0-alpha6",
-    "@vaadin/checkbox": "24.4.0-alpha6",
-    "@vaadin/checkbox-group": "24.4.0-alpha6",
-    "@vaadin/combo-box": "24.4.0-alpha6",
+    "@vaadin/accordion": "24.4.0-alpha5",
+    "@vaadin/app-layout": "24.4.0-alpha5",
+    "@vaadin/avatar": "24.4.0-alpha5",
+    "@vaadin/avatar-group": "24.4.0-alpha5",
+    "@vaadin/board": "24.4.0-alpha5",
+    "@vaadin/bundles": "24.4.0-alpha5",
+    "@vaadin/button": "24.4.0-alpha5",
+    "@vaadin/charts": "24.4.0-alpha5",
+    "@vaadin/checkbox": "24.4.0-alpha5",
+    "@vaadin/checkbox-group": "24.4.0-alpha5",
+    "@vaadin/combo-box": "24.4.0-alpha5",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/confirm-dialog": "24.4.0-alpha6",
-    "@vaadin/context-menu": "24.4.0-alpha6",
-    "@vaadin/cookie-consent": "24.4.0-alpha6",
-    "@vaadin/crud": "24.4.0-alpha6",
-    "@vaadin/custom-field": "24.4.0-alpha6",
-    "@vaadin/date-picker": "24.4.0-alpha6",
-    "@vaadin/date-time-picker": "24.4.0-alpha6",
-    "@vaadin/details": "24.4.0-alpha6",
-    "@vaadin/dialog": "24.4.0-alpha6",
-    "@vaadin/email-field": "24.4.0-alpha6",
-    "@vaadin/field-highlighter": "24.4.0-alpha6",
-    "@vaadin/form-layout": "24.4.0-alpha6",
-    "@vaadin/grid": "24.4.0-alpha6",
-    "@vaadin/grid-pro": "24.4.0-alpha6",
+    "@vaadin/confirm-dialog": "24.4.0-alpha5",
+    "@vaadin/context-menu": "24.4.0-alpha5",
+    "@vaadin/cookie-consent": "24.4.0-alpha5",
+    "@vaadin/crud": "24.4.0-alpha5",
+    "@vaadin/custom-field": "24.4.0-alpha5",
+    "@vaadin/date-picker": "24.4.0-alpha5",
+    "@vaadin/date-time-picker": "24.4.0-alpha5",
+    "@vaadin/details": "24.4.0-alpha5",
+    "@vaadin/dialog": "24.4.0-alpha5",
+    "@vaadin/email-field": "24.4.0-alpha5",
+    "@vaadin/field-highlighter": "24.4.0-alpha5",
+    "@vaadin/form-layout": "24.4.0-alpha5",
+    "@vaadin/grid": "24.4.0-alpha5",
+    "@vaadin/grid-pro": "24.4.0-alpha5",
     "@vaadin/hilla-core": "24.4.0-alpha2",
     "@vaadin/hilla-generator-cli": "24.4.0-alpha2",
     "@vaadin/hilla-generator-core": "24.4.0-alpha2",
@@ -47,47 +47,47 @@
     "@vaadin/hilla-react-auth": "24.4.0-alpha2",
     "@vaadin/hilla-react-crud": "24.4.0-alpha2",
     "@vaadin/hilla-react-form": "24.4.0-alpha2",
-    "@vaadin/horizontal-layout": "24.4.0-alpha6",
-    "@vaadin/icon": "24.4.0-alpha6",
-    "@vaadin/icons": "24.4.0-alpha6",
-    "@vaadin/integer-field": "24.4.0-alpha6",
-    "@vaadin/item": "24.4.0-alpha6",
-    "@vaadin/list-box": "24.4.0-alpha6",
-    "@vaadin/login": "24.4.0-alpha6",
-    "@vaadin/map": "24.4.0-alpha6",
-    "@vaadin/menu-bar": "24.4.0-alpha6",
-    "@vaadin/message-input": "24.4.0-alpha6",
-    "@vaadin/message-list": "24.4.0-alpha6",
-    "@vaadin/multi-select-combo-box": "24.4.0-alpha6",
-    "@vaadin/notification": "24.4.0-alpha6",
-    "@vaadin/number-field": "24.4.0-alpha6",
-    "@vaadin/password-field": "24.4.0-alpha6",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha6",
-    "@vaadin/progress-bar": "24.4.0-alpha6",
-    "@vaadin/radio-group": "24.4.0-alpha6",
-    "@vaadin/react-components": "24.4.0-alpha6",
-    "@vaadin/rich-text-editor": "24.4.0-alpha6",
-    "@vaadin/scroller": "24.4.0-alpha6",
-    "@vaadin/select": "24.4.0-alpha6",
-    "@vaadin/side-nav": "24.4.0-alpha6",
-    "@vaadin/split-layout": "24.4.0-alpha6",
-    "@vaadin/tabs": "24.4.0-alpha6",
-    "@vaadin/tabsheet": "24.4.0-alpha6",
-    "@vaadin/text-area": "24.4.0-alpha6",
-    "@vaadin/text-field": "24.4.0-alpha6",
-    "@vaadin/time-picker": "24.4.0-alpha6",
-    "@vaadin/tooltip": "24.4.0-alpha6",
-    "@vaadin/upload": "24.4.0-alpha6",
-    "@vaadin/vertical-layout": "24.4.0-alpha6",
-    "@vaadin/virtual-list": "24.4.0-alpha6",
+    "@vaadin/horizontal-layout": "24.4.0-alpha5",
+    "@vaadin/icon": "24.4.0-alpha5",
+    "@vaadin/icons": "24.4.0-alpha5",
+    "@vaadin/integer-field": "24.4.0-alpha5",
+    "@vaadin/item": "24.4.0-alpha5",
+    "@vaadin/list-box": "24.4.0-alpha5",
+    "@vaadin/login": "24.4.0-alpha5",
+    "@vaadin/map": "24.4.0-alpha5",
+    "@vaadin/menu-bar": "24.4.0-alpha5",
+    "@vaadin/message-input": "24.4.0-alpha5",
+    "@vaadin/message-list": "24.4.0-alpha5",
+    "@vaadin/multi-select-combo-box": "24.4.0-alpha5",
+    "@vaadin/notification": "24.4.0-alpha5",
+    "@vaadin/number-field": "24.4.0-alpha5",
+    "@vaadin/password-field": "24.4.0-alpha5",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha5",
+    "@vaadin/progress-bar": "24.4.0-alpha5",
+    "@vaadin/radio-group": "24.4.0-alpha5",
+    "@vaadin/react-components": "24.4.0-alpha4",
+    "@vaadin/rich-text-editor": "24.4.0-alpha5",
+    "@vaadin/scroller": "24.4.0-alpha5",
+    "@vaadin/select": "24.4.0-alpha5",
+    "@vaadin/side-nav": "24.4.0-alpha5",
+    "@vaadin/split-layout": "24.4.0-alpha5",
+    "@vaadin/tabs": "24.4.0-alpha5",
+    "@vaadin/tabsheet": "24.4.0-alpha5",
+    "@vaadin/text-area": "24.4.0-alpha5",
+    "@vaadin/text-field": "24.4.0-alpha5",
+    "@vaadin/time-picker": "24.4.0-alpha5",
+    "@vaadin/tooltip": "24.4.0-alpha5",
+    "@vaadin/upload": "24.4.0-alpha5",
+    "@vaadin/vertical-layout": "24.4.0-alpha5",
+    "@vaadin/virtual-list": "24.4.0-alpha5",
     "classnames": "^2.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "3.1.1",
+    "lit": "3.1.0",
     "proj4": "2.9.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "6.21.2"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.18.0"
   },
   "devDependencies": {
     "@lit-labs/react": "^1.1.0",
@@ -100,11 +100,11 @@
     "async": "3.2.5",
     "glob": "10.3.10",
     "rollup-plugin-brotli": "3.1.0",
-    "rollup-plugin-visualizer": "5.12.0",
+    "rollup-plugin-visualizer": "5.11.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.3.3",
-    "vite": "5.0.11",
+    "vite": "5.0.10",
     "vite-plugin-checker": "0.6.2",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -122,9 +122,6 @@
     "@polymer/polymer": "$@polymer/polymer",
     "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
     "classnames": "$classnames",
-    "react": "$react",
-    "react-dom": "$react-dom",
-    "react-router-dom": "$react-router-dom",
     "@vaadin/board": "$@vaadin/board",
     "@vaadin/charts": "$@vaadin/charts",
     "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
@@ -195,39 +192,42 @@
     "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
     "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
     "@vaadin/hilla-generator-cli": "$@vaadin/hilla-generator-cli",
-    "@vaadin/hilla-generator-plugin-backbone": "$@vaadin/hilla-generator-plugin-backbone"
+    "@vaadin/hilla-generator-plugin-backbone": "$@vaadin/hilla-generator-plugin-backbone",
+    "react-dom": "$react-dom",
+    "react-router-dom": "$react-router-dom",
+    "react": "$react"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@types/react": "18.2.48",
-      "@types/react-dom": "18.2.18",
-      "@vaadin/accordion": "24.4.0-alpha6",
-      "@vaadin/app-layout": "24.4.0-alpha6",
-      "@vaadin/avatar": "24.4.0-alpha6",
-      "@vaadin/avatar-group": "24.4.0-alpha6",
-      "@vaadin/board": "24.4.0-alpha6",
-      "@vaadin/bundles": "24.4.0-alpha6",
-      "@vaadin/button": "24.4.0-alpha6",
-      "@vaadin/charts": "24.4.0-alpha6",
-      "@vaadin/checkbox": "24.4.0-alpha6",
-      "@vaadin/checkbox-group": "24.4.0-alpha6",
-      "@vaadin/combo-box": "24.4.0-alpha6",
+      "@types/react": "18.2.37",
+      "@types/react-dom": "18.2.15",
+      "@vaadin/accordion": "24.4.0-alpha5",
+      "@vaadin/app-layout": "24.4.0-alpha5",
+      "@vaadin/avatar": "24.4.0-alpha5",
+      "@vaadin/avatar-group": "24.4.0-alpha5",
+      "@vaadin/board": "24.4.0-alpha5",
+      "@vaadin/bundles": "24.4.0-alpha5",
+      "@vaadin/button": "24.4.0-alpha5",
+      "@vaadin/charts": "24.4.0-alpha5",
+      "@vaadin/checkbox": "24.4.0-alpha5",
+      "@vaadin/checkbox-group": "24.4.0-alpha5",
+      "@vaadin/combo-box": "24.4.0-alpha5",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/confirm-dialog": "24.4.0-alpha6",
-      "@vaadin/context-menu": "24.4.0-alpha6",
-      "@vaadin/cookie-consent": "24.4.0-alpha6",
-      "@vaadin/crud": "24.4.0-alpha6",
-      "@vaadin/custom-field": "24.4.0-alpha6",
-      "@vaadin/date-picker": "24.4.0-alpha6",
-      "@vaadin/date-time-picker": "24.4.0-alpha6",
-      "@vaadin/details": "24.4.0-alpha6",
-      "@vaadin/dialog": "24.4.0-alpha6",
-      "@vaadin/email-field": "24.4.0-alpha6",
-      "@vaadin/field-highlighter": "24.4.0-alpha6",
-      "@vaadin/form-layout": "24.4.0-alpha6",
-      "@vaadin/grid": "24.4.0-alpha6",
-      "@vaadin/grid-pro": "24.4.0-alpha6",
+      "@vaadin/confirm-dialog": "24.4.0-alpha5",
+      "@vaadin/context-menu": "24.4.0-alpha5",
+      "@vaadin/cookie-consent": "24.4.0-alpha5",
+      "@vaadin/crud": "24.4.0-alpha5",
+      "@vaadin/custom-field": "24.4.0-alpha5",
+      "@vaadin/date-picker": "24.4.0-alpha5",
+      "@vaadin/date-time-picker": "24.4.0-alpha5",
+      "@vaadin/details": "24.4.0-alpha5",
+      "@vaadin/dialog": "24.4.0-alpha5",
+      "@vaadin/email-field": "24.4.0-alpha5",
+      "@vaadin/field-highlighter": "24.4.0-alpha5",
+      "@vaadin/form-layout": "24.4.0-alpha5",
+      "@vaadin/grid": "24.4.0-alpha5",
+      "@vaadin/grid-pro": "24.4.0-alpha5",
       "@vaadin/hilla-core": "24.4.0-alpha2",
       "@vaadin/hilla-generator-cli": "24.4.0-alpha2",
       "@vaadin/hilla-generator-core": "24.4.0-alpha2",
@@ -242,46 +242,46 @@
       "@vaadin/hilla-react-auth": "24.4.0-alpha2",
       "@vaadin/hilla-react-crud": "24.4.0-alpha2",
       "@vaadin/hilla-react-form": "24.4.0-alpha2",
-      "@vaadin/horizontal-layout": "24.4.0-alpha6",
-      "@vaadin/icon": "24.4.0-alpha6",
-      "@vaadin/icons": "24.4.0-alpha6",
-      "@vaadin/integer-field": "24.4.0-alpha6",
-      "@vaadin/item": "24.4.0-alpha6",
-      "@vaadin/list-box": "24.4.0-alpha6",
-      "@vaadin/login": "24.4.0-alpha6",
-      "@vaadin/map": "24.4.0-alpha6",
-      "@vaadin/menu-bar": "24.4.0-alpha6",
-      "@vaadin/message-input": "24.4.0-alpha6",
-      "@vaadin/message-list": "24.4.0-alpha6",
-      "@vaadin/multi-select-combo-box": "24.4.0-alpha6",
-      "@vaadin/notification": "24.4.0-alpha6",
-      "@vaadin/number-field": "24.4.0-alpha6",
-      "@vaadin/password-field": "24.4.0-alpha6",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha6",
-      "@vaadin/progress-bar": "24.4.0-alpha6",
-      "@vaadin/radio-group": "24.4.0-alpha6",
-      "@vaadin/react-components": "24.4.0-alpha6",
-      "@vaadin/rich-text-editor": "24.4.0-alpha6",
-      "@vaadin/scroller": "24.4.0-alpha6",
-      "@vaadin/select": "24.4.0-alpha6",
-      "@vaadin/side-nav": "24.4.0-alpha6",
-      "@vaadin/split-layout": "24.4.0-alpha6",
-      "@vaadin/tabs": "24.4.0-alpha6",
-      "@vaadin/tabsheet": "24.4.0-alpha6",
-      "@vaadin/text-area": "24.4.0-alpha6",
-      "@vaadin/text-field": "24.4.0-alpha6",
-      "@vaadin/time-picker": "24.4.0-alpha6",
-      "@vaadin/tooltip": "24.4.0-alpha6",
-      "@vaadin/upload": "24.4.0-alpha6",
-      "@vaadin/vertical-layout": "24.4.0-alpha6",
-      "@vaadin/virtual-list": "24.4.0-alpha6",
+      "@vaadin/horizontal-layout": "24.4.0-alpha5",
+      "@vaadin/icon": "24.4.0-alpha5",
+      "@vaadin/icons": "24.4.0-alpha5",
+      "@vaadin/integer-field": "24.4.0-alpha5",
+      "@vaadin/item": "24.4.0-alpha5",
+      "@vaadin/list-box": "24.4.0-alpha5",
+      "@vaadin/login": "24.4.0-alpha5",
+      "@vaadin/map": "24.4.0-alpha5",
+      "@vaadin/menu-bar": "24.4.0-alpha5",
+      "@vaadin/message-input": "24.4.0-alpha5",
+      "@vaadin/message-list": "24.4.0-alpha5",
+      "@vaadin/multi-select-combo-box": "24.4.0-alpha5",
+      "@vaadin/notification": "24.4.0-alpha5",
+      "@vaadin/number-field": "24.4.0-alpha5",
+      "@vaadin/password-field": "24.4.0-alpha5",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha5",
+      "@vaadin/progress-bar": "24.4.0-alpha5",
+      "@vaadin/radio-group": "24.4.0-alpha5",
+      "@vaadin/react-components": "24.4.0-alpha4",
+      "@vaadin/rich-text-editor": "24.4.0-alpha5",
+      "@vaadin/scroller": "24.4.0-alpha5",
+      "@vaadin/select": "24.4.0-alpha5",
+      "@vaadin/side-nav": "24.4.0-alpha5",
+      "@vaadin/split-layout": "24.4.0-alpha5",
+      "@vaadin/tabs": "24.4.0-alpha5",
+      "@vaadin/tabsheet": "24.4.0-alpha5",
+      "@vaadin/text-area": "24.4.0-alpha5",
+      "@vaadin/text-field": "24.4.0-alpha5",
+      "@vaadin/time-picker": "24.4.0-alpha5",
+      "@vaadin/tooltip": "24.4.0-alpha5",
+      "@vaadin/upload": "24.4.0-alpha5",
+      "@vaadin/vertical-layout": "24.4.0-alpha5",
+      "@vaadin/virtual-list": "24.4.0-alpha5",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "3.1.1",
+      "lit": "3.1.0",
       "proj4": "2.9.2",
       "react": "18.2.0",
       "react-dom": "18.2.0",
-      "react-router-dom": "6.21.2"
+      "react-router-dom": "6.18.0"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "5.0.5",
@@ -291,16 +291,16 @@
       "async": "3.2.5",
       "glob": "10.3.10",
       "rollup-plugin-brotli": "3.1.0",
-      "rollup-plugin-visualizer": "5.12.0",
+      "rollup-plugin-visualizer": "5.11.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.3.3",
-      "vite": "5.0.11",
+      "vite": "5.0.10",
       "vite-plugin-checker": "0.6.2",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "528582264dbdf92b3c0c1bc9359186a61feb9224623e3d3f9568c82c7ca46baa"
+    "hash": "9471276fbb7fcadd62f035ac2e1869dad05953522e7bcfb737b1aa546b3bc6cf"
   }
 }
