--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.4-SNAPSHOT</vaadin.version>
-        <hilla.version>24.4-SNAPSHOT</hilla.version>
+        <vaadin.version>24.4.0.alpha2</vaadin.version>
+        <hilla.version>24.4.0.alpha2</hilla.version>
     </properties>
 
     <parent>
