--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
             <artifactId>hilla-react</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.vaadin.hilla</groupId>
-            <artifactId>hilla-react-spring-boot-starter</artifactId>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-spring-boot-starter</artifactId>
          </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
