Upgrade to latest Flow

--- a/package.json
+++ b/package.json
@@ -4,38 +4,38 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@types/react": "18.2.48",
+    "@types/react": "18.2.50",
     "@types/react-dom": "18.2.18",
     "@vaadin-component-factory/vcf-nav": "1.1.0",
-    "@vaadin/a11y-base": "24.4.0-alpha8",
-    "@vaadin/accordion": "24.4.0-alpha8",
-    "@vaadin/app-layout": "24.4.0-alpha8",
-    "@vaadin/avatar": "24.4.0-alpha8",
-    "@vaadin/avatar-group": "24.4.0-alpha8",
-    "@vaadin/board": "24.4.0-alpha8",
-    "@vaadin/bundles": "24.4.0-alpha8",
-    "@vaadin/button": "24.4.0-alpha8",
-    "@vaadin/charts": "24.4.0-alpha8",
-    "@vaadin/checkbox": "24.4.0-alpha8",
-    "@vaadin/checkbox-group": "24.4.0-alpha8",
-    "@vaadin/combo-box": "24.4.0-alpha8",
+    "@vaadin/a11y-base": "24.4.0-alpha10",
+    "@vaadin/accordion": "24.4.0-alpha10",
+    "@vaadin/app-layout": "24.4.0-alpha10",
+    "@vaadin/avatar": "24.4.0-alpha10",
+    "@vaadin/avatar-group": "24.4.0-alpha10",
+    "@vaadin/board": "24.4.0-alpha10",
+    "@vaadin/bundles": "24.4.0-alpha10",
+    "@vaadin/button": "24.4.0-alpha10",
+    "@vaadin/charts": "24.4.0-alpha10",
+    "@vaadin/checkbox": "24.4.0-alpha10",
+    "@vaadin/checkbox-group": "24.4.0-alpha10",
+    "@vaadin/combo-box": "24.4.0-alpha10",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/component-base": "24.4.0-alpha8",
-    "@vaadin/confirm-dialog": "24.4.0-alpha8",
-    "@vaadin/context-menu": "24.4.0-alpha8",
-    "@vaadin/cookie-consent": "24.4.0-alpha8",
-    "@vaadin/crud": "24.4.0-alpha8",
-    "@vaadin/custom-field": "24.4.0-alpha8",
-    "@vaadin/date-picker": "24.4.0-alpha8",
-    "@vaadin/date-time-picker": "24.4.0-alpha8",
-    "@vaadin/details": "24.4.0-alpha8",
-    "@vaadin/dialog": "24.4.0-alpha8",
-    "@vaadin/email-field": "24.4.0-alpha8",
-    "@vaadin/field-base": "24.4.0-alpha8",
-    "@vaadin/field-highlighter": "24.4.0-alpha8",
-    "@vaadin/form-layout": "24.4.0-alpha8",
-    "@vaadin/grid": "24.4.0-alpha8",
-    "@vaadin/grid-pro": "24.4.0-alpha8",
+    "@vaadin/component-base": "24.4.0-alpha10",
+    "@vaadin/confirm-dialog": "24.4.0-alpha10",
+    "@vaadin/context-menu": "24.4.0-alpha10",
+    "@vaadin/cookie-consent": "24.4.0-alpha10",
+    "@vaadin/crud": "24.4.0-alpha10",
+    "@vaadin/custom-field": "24.4.0-alpha10",
+    "@vaadin/date-picker": "24.4.0-alpha10",
+    "@vaadin/date-time-picker": "24.4.0-alpha10",
+    "@vaadin/details": "24.4.0-alpha10",
+    "@vaadin/dialog": "24.4.0-alpha10",
+    "@vaadin/email-field": "24.4.0-alpha10",
+    "@vaadin/field-base": "24.4.0-alpha10",
+    "@vaadin/field-highlighter": "24.4.0-alpha10",
+    "@vaadin/form-layout": "24.4.0-alpha10",
+    "@vaadin/grid": "24.4.0-alpha10",
+    "@vaadin/grid-pro": "24.4.0-alpha10",
     "@vaadin/hilla-core": "24.4.0-alpha2",
     "@vaadin/hilla-generator-cli": "24.4.0-alpha2",
     "@vaadin/hilla-generator-core": "24.4.0-alpha2",
@@ -50,56 +50,57 @@
     "@vaadin/hilla-react-auth": "24.4.0-alpha2",
     "@vaadin/hilla-react-crud": "24.4.0-alpha2",
     "@vaadin/hilla-react-form": "24.4.0-alpha2",
-    "@vaadin/horizontal-layout": "24.4.0-alpha8",
-    "@vaadin/icon": "24.4.0-alpha8",
-    "@vaadin/icons": "24.4.0-alpha8",
-    "@vaadin/input-container": "24.4.0-alpha8",
-    "@vaadin/integer-field": "24.4.0-alpha8",
-    "@vaadin/item": "24.4.0-alpha8",
-    "@vaadin/list-box": "24.4.0-alpha8",
-    "@vaadin/lit-renderer": "24.4.0-alpha8",
-    "@vaadin/login": "24.4.0-alpha8",
-    "@vaadin/map": "24.4.0-alpha8",
-    "@vaadin/menu-bar": "24.4.0-alpha8",
-    "@vaadin/message-input": "24.4.0-alpha8",
-    "@vaadin/message-list": "24.4.0-alpha8",
-    "@vaadin/multi-select-combo-box": "24.4.0-alpha8",
-    "@vaadin/notification": "24.4.0-alpha8",
-    "@vaadin/number-field": "24.4.0-alpha8",
-    "@vaadin/overlay": "24.4.0-alpha8",
-    "@vaadin/password-field": "24.4.0-alpha8",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha8",
-    "@vaadin/progress-bar": "24.4.0-alpha8",
-    "@vaadin/radio-group": "24.4.0-alpha8",
-    "@vaadin/react-components": "24.4.0-alpha5",
-    "@vaadin/rich-text-editor": "24.4.0-alpha8",
+    "@vaadin/horizontal-layout": "24.4.0-alpha10",
+    "@vaadin/icon": "24.4.0-alpha10",
+    "@vaadin/icons": "24.4.0-alpha10",
+    "@vaadin/input-container": "24.4.0-alpha10",
+    "@vaadin/integer-field": "24.4.0-alpha10",
+    "@vaadin/item": "24.4.0-alpha10",
+    "@vaadin/list-box": "24.4.0-alpha10",
+    "@vaadin/lit-renderer": "24.4.0-alpha10",
+    "@vaadin/login": "24.4.0-alpha10",
+    "@vaadin/map": "24.4.0-alpha10",
+    "@vaadin/menu-bar": "24.4.0-alpha10",
+    "@vaadin/message-input": "24.4.0-alpha10",
+    "@vaadin/message-list": "24.4.0-alpha10",
+    "@vaadin/multi-select-combo-box": "24.4.0-alpha10",
+    "@vaadin/notification": "24.4.0-alpha10",
+    "@vaadin/number-field": "24.4.0-alpha10",
+    "@vaadin/overlay": "24.4.0-alpha10",
+    "@vaadin/password-field": "24.4.0-alpha10",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha10",
+    "@vaadin/progress-bar": "24.4.0-alpha10",
+    "@vaadin/radio-group": "24.4.0-alpha10",
+    "@vaadin/react-components": "24.4.0-alpha10",
+    "@vaadin/react-components-pro": "24.4.0-alpha10",
+    "@vaadin/rich-text-editor": "24.4.0-alpha10",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "24.4.0-alpha8",
-    "@vaadin/select": "24.4.0-alpha8",
-    "@vaadin/side-nav": "24.4.0-alpha8",
-    "@vaadin/split-layout": "24.4.0-alpha8",
-    "@vaadin/tabs": "24.4.0-alpha8",
-    "@vaadin/tabsheet": "24.4.0-alpha8",
-    "@vaadin/text-area": "24.4.0-alpha8",
-    "@vaadin/text-field": "24.4.0-alpha8",
-    "@vaadin/time-picker": "24.4.0-alpha8",
-    "@vaadin/tooltip": "24.4.0-alpha8",
-    "@vaadin/upload": "24.4.0-alpha8",
+    "@vaadin/scroller": "24.4.0-alpha10",
+    "@vaadin/select": "24.4.0-alpha10",
+    "@vaadin/side-nav": "24.4.0-alpha10",
+    "@vaadin/split-layout": "24.4.0-alpha10",
+    "@vaadin/tabs": "24.4.0-alpha10",
+    "@vaadin/tabsheet": "24.4.0-alpha10",
+    "@vaadin/text-area": "24.4.0-alpha10",
+    "@vaadin/text-field": "24.4.0-alpha10",
+    "@vaadin/time-picker": "24.4.0-alpha10",
+    "@vaadin/tooltip": "24.4.0-alpha10",
+    "@vaadin/upload": "24.4.0-alpha10",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha8",
-    "@vaadin/vaadin-material-styles": "24.4.0-alpha8",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha8",
+    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha10",
+    "@vaadin/vaadin-material-styles": "24.4.0-alpha10",
+    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha10",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.4.0-alpha8",
-    "@vaadin/virtual-list": "24.4.0-alpha8",
+    "@vaadin/vertical-layout": "24.4.0-alpha10",
+    "@vaadin/virtual-list": "24.4.0-alpha10",
     "classnames": "^2.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "3.1.1",
-    "proj4": "2.9.2",
+    "lit": "3.1.2",
+    "proj4": "2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.21.2"
+    "react-router-dom": "6.21.3"
   },
   "devDependencies": {
     "@babel/preset-react": "^7",
@@ -117,7 +118,7 @@
     "transform-ast": "2.4.4",
     "typescript": "5.3.3",
     "vite": "5.0.12",
-    "vite-plugin-checker": "0.6.2",
+    "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
     "workbox-precaching": "7.0.0"
@@ -219,42 +220,43 @@
     "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
     "@vaadin/router": "$@vaadin/router",
     "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
-    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin"
+    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
+    "@vaadin/react-components-pro": "$@vaadin/react-components-pro"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@types/react": "18.2.48",
+      "@types/react": "18.2.50",
       "@types/react-dom": "18.2.18",
-      "@vaadin/a11y-base": "24.4.0-alpha8",
-      "@vaadin/accordion": "24.4.0-alpha8",
-      "@vaadin/app-layout": "24.4.0-alpha8",
-      "@vaadin/avatar": "24.4.0-alpha8",
-      "@vaadin/avatar-group": "24.4.0-alpha8",
-      "@vaadin/board": "24.4.0-alpha8",
-      "@vaadin/bundles": "24.4.0-alpha8",
-      "@vaadin/button": "24.4.0-alpha8",
-      "@vaadin/charts": "24.4.0-alpha8",
-      "@vaadin/checkbox": "24.4.0-alpha8",
-      "@vaadin/checkbox-group": "24.4.0-alpha8",
-      "@vaadin/combo-box": "24.4.0-alpha8",
+      "@vaadin/a11y-base": "24.4.0-alpha10",
+      "@vaadin/accordion": "24.4.0-alpha10",
+      "@vaadin/app-layout": "24.4.0-alpha10",
+      "@vaadin/avatar": "24.4.0-alpha10",
+      "@vaadin/avatar-group": "24.4.0-alpha10",
+      "@vaadin/board": "24.4.0-alpha10",
+      "@vaadin/bundles": "24.4.0-alpha10",
+      "@vaadin/button": "24.4.0-alpha10",
+      "@vaadin/charts": "24.4.0-alpha10",
+      "@vaadin/checkbox": "24.4.0-alpha10",
+      "@vaadin/checkbox-group": "24.4.0-alpha10",
+      "@vaadin/combo-box": "24.4.0-alpha10",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/component-base": "24.4.0-alpha8",
-      "@vaadin/confirm-dialog": "24.4.0-alpha8",
-      "@vaadin/context-menu": "24.4.0-alpha8",
-      "@vaadin/cookie-consent": "24.4.0-alpha8",
-      "@vaadin/crud": "24.4.0-alpha8",
-      "@vaadin/custom-field": "24.4.0-alpha8",
-      "@vaadin/date-picker": "24.4.0-alpha8",
-      "@vaadin/date-time-picker": "24.4.0-alpha8",
-      "@vaadin/details": "24.4.0-alpha8",
-      "@vaadin/dialog": "24.4.0-alpha8",
-      "@vaadin/email-field": "24.4.0-alpha8",
-      "@vaadin/field-base": "24.4.0-alpha8",
-      "@vaadin/field-highlighter": "24.4.0-alpha8",
-      "@vaadin/form-layout": "24.4.0-alpha8",
-      "@vaadin/grid": "24.4.0-alpha8",
-      "@vaadin/grid-pro": "24.4.0-alpha8",
+      "@vaadin/component-base": "24.4.0-alpha10",
+      "@vaadin/confirm-dialog": "24.4.0-alpha10",
+      "@vaadin/context-menu": "24.4.0-alpha10",
+      "@vaadin/cookie-consent": "24.4.0-alpha10",
+      "@vaadin/crud": "24.4.0-alpha10",
+      "@vaadin/custom-field": "24.4.0-alpha10",
+      "@vaadin/date-picker": "24.4.0-alpha10",
+      "@vaadin/date-time-picker": "24.4.0-alpha10",
+      "@vaadin/details": "24.4.0-alpha10",
+      "@vaadin/dialog": "24.4.0-alpha10",
+      "@vaadin/email-field": "24.4.0-alpha10",
+      "@vaadin/field-base": "24.4.0-alpha10",
+      "@vaadin/field-highlighter": "24.4.0-alpha10",
+      "@vaadin/form-layout": "24.4.0-alpha10",
+      "@vaadin/grid": "24.4.0-alpha10",
+      "@vaadin/grid-pro": "24.4.0-alpha10",
       "@vaadin/hilla-core": "24.4.0-alpha2",
       "@vaadin/hilla-generator-cli": "24.4.0-alpha2",
       "@vaadin/hilla-generator-core": "24.4.0-alpha2",
@@ -269,55 +271,56 @@
       "@vaadin/hilla-react-auth": "24.4.0-alpha2",
       "@vaadin/hilla-react-crud": "24.4.0-alpha2",
       "@vaadin/hilla-react-form": "24.4.0-alpha2",
-      "@vaadin/horizontal-layout": "24.4.0-alpha8",
-      "@vaadin/icon": "24.4.0-alpha8",
-      "@vaadin/icons": "24.4.0-alpha8",
-      "@vaadin/input-container": "24.4.0-alpha8",
-      "@vaadin/integer-field": "24.4.0-alpha8",
-      "@vaadin/item": "24.4.0-alpha8",
-      "@vaadin/list-box": "24.4.0-alpha8",
-      "@vaadin/lit-renderer": "24.4.0-alpha8",
-      "@vaadin/login": "24.4.0-alpha8",
-      "@vaadin/map": "24.4.0-alpha8",
-      "@vaadin/menu-bar": "24.4.0-alpha8",
-      "@vaadin/message-input": "24.4.0-alpha8",
-      "@vaadin/message-list": "24.4.0-alpha8",
-      "@vaadin/multi-select-combo-box": "24.4.0-alpha8",
-      "@vaadin/notification": "24.4.0-alpha8",
-      "@vaadin/number-field": "24.4.0-alpha8",
-      "@vaadin/overlay": "24.4.0-alpha8",
-      "@vaadin/password-field": "24.4.0-alpha8",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha8",
-      "@vaadin/progress-bar": "24.4.0-alpha8",
-      "@vaadin/radio-group": "24.4.0-alpha8",
-      "@vaadin/react-components": "24.4.0-alpha5",
-      "@vaadin/rich-text-editor": "24.4.0-alpha8",
+      "@vaadin/horizontal-layout": "24.4.0-alpha10",
+      "@vaadin/icon": "24.4.0-alpha10",
+      "@vaadin/icons": "24.4.0-alpha10",
+      "@vaadin/input-container": "24.4.0-alpha10",
+      "@vaadin/integer-field": "24.4.0-alpha10",
+      "@vaadin/item": "24.4.0-alpha10",
+      "@vaadin/list-box": "24.4.0-alpha10",
+      "@vaadin/lit-renderer": "24.4.0-alpha10",
+      "@vaadin/login": "24.4.0-alpha10",
+      "@vaadin/map": "24.4.0-alpha10",
+      "@vaadin/menu-bar": "24.4.0-alpha10",
+      "@vaadin/message-input": "24.4.0-alpha10",
+      "@vaadin/message-list": "24.4.0-alpha10",
+      "@vaadin/multi-select-combo-box": "24.4.0-alpha10",
+      "@vaadin/notification": "24.4.0-alpha10",
+      "@vaadin/number-field": "24.4.0-alpha10",
+      "@vaadin/overlay": "24.4.0-alpha10",
+      "@vaadin/password-field": "24.4.0-alpha10",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha10",
+      "@vaadin/progress-bar": "24.4.0-alpha10",
+      "@vaadin/radio-group": "24.4.0-alpha10",
+      "@vaadin/react-components": "24.4.0-alpha10",
+      "@vaadin/react-components-pro": "24.4.0-alpha10",
+      "@vaadin/rich-text-editor": "24.4.0-alpha10",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "24.4.0-alpha8",
-      "@vaadin/select": "24.4.0-alpha8",
-      "@vaadin/side-nav": "24.4.0-alpha8",
-      "@vaadin/split-layout": "24.4.0-alpha8",
-      "@vaadin/tabs": "24.4.0-alpha8",
-      "@vaadin/tabsheet": "24.4.0-alpha8",
-      "@vaadin/text-area": "24.4.0-alpha8",
-      "@vaadin/text-field": "24.4.0-alpha8",
-      "@vaadin/time-picker": "24.4.0-alpha8",
-      "@vaadin/tooltip": "24.4.0-alpha8",
-      "@vaadin/upload": "24.4.0-alpha8",
+      "@vaadin/scroller": "24.4.0-alpha10",
+      "@vaadin/select": "24.4.0-alpha10",
+      "@vaadin/side-nav": "24.4.0-alpha10",
+      "@vaadin/split-layout": "24.4.0-alpha10",
+      "@vaadin/tabs": "24.4.0-alpha10",
+      "@vaadin/tabsheet": "24.4.0-alpha10",
+      "@vaadin/text-area": "24.4.0-alpha10",
+      "@vaadin/text-field": "24.4.0-alpha10",
+      "@vaadin/time-picker": "24.4.0-alpha10",
+      "@vaadin/tooltip": "24.4.0-alpha10",
+      "@vaadin/upload": "24.4.0-alpha10",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha8",
-      "@vaadin/vaadin-material-styles": "24.4.0-alpha8",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha8",
+      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha10",
+      "@vaadin/vaadin-material-styles": "24.4.0-alpha10",
+      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha10",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.4.0-alpha8",
-      "@vaadin/virtual-list": "24.4.0-alpha8",
+      "@vaadin/vertical-layout": "24.4.0-alpha10",
+      "@vaadin/virtual-list": "24.4.0-alpha10",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "3.1.1",
-      "proj4": "2.9.2",
+      "lit": "3.1.2",
+      "proj4": "2.10.0",
       "react": "18.2.0",
       "react-dom": "18.2.0",
-      "react-router-dom": "6.21.2"
+      "react-router-dom": "6.21.3"
     },
     "devDependencies": {
       "@babel/preset-react": "^7",
@@ -332,11 +335,11 @@
       "transform-ast": "2.4.4",
       "typescript": "5.3.3",
       "vite": "5.0.12",
-      "vite-plugin-checker": "0.6.2",
+      "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "77a2bd39376471c3d44b027360c3f4e521bb4e0a83998e06a9695c0ae7e01f80"
+    "hash": "f2c92c05619f1cf848768970b53ab815be311f04103f096c23f72f1856cccdc5"
   }
 }
